fix display times overlapping form

--- a/index.css
+++ b/index.css
@@ -43,5 +43,5 @@ input {
 }
 
 #displayTime {
-    padding: 10px;
+    margin-top: 30vw;
 }
